# binary_type_cast

./: .gitignore  Cargo.toml  README.md  justfile
data/: desc.xml
examples/: btreemapped_fields.rs  hashmapped_fields.rs
examples/utils/: generate_mock_data.rs  mod.rs
src/: doc.md  lib.rs  main.rs  save.rs
src/utils/: cast_extraction.rs  from_str.rs  mod.rs  try_into.rs
type_cast_macro/: Cargo.toml
type_cast_macro/src/: lib.rs
type_cast_macro/type_cast_macro_derive/: Cargo.toml
type_cast_macro/type_cast_macro_derive/src/: lib.rs
type_cast_macro_derive/: Cargo.toml
type_cast_macro_derive/src/utils/: cast_extraction.rs  try_into.rs
