[package]
name = "binary_type_cast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
serde = {version = "1.0.147", features = ["derive"]}
serde-xml-rs = "0.6.0"
type_cast_macro_derive = {version = "0.1.0", path = "./type_cast_macro_derive"}
