[package]
name = "binary_type_cast"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
nom = "7.1.1"
serde = {version = "1.0.147", features = ["derive"]}
serde-xml-rs = "0.6.0"
proc-macro2 = "1.0.47"
quote = "1.0.26"
syn = {version = "1.0.102", features = ["extra-traits","derive"]}
